--- a/src/carnet/AddressBookBundle/Resources/views/Contact/lister.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Contact/lister.html.twig
@@ -1,7 +1,8 @@
-{% extends "::base.html.twig" %}
+{% extends "AddressBookBundle::base.html.twig" %}
 
 {% block title %}carnetAddressBookBundle:Contact:lister{% endblock %}
 
 {% block body %}
 <h1>Welcome to the Contact:lister page</h1>
+lister
 {% endblock %}
