--- a/src/carnet/AddressBookBundle/Resources/views/Contact/lister.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Contact/lister.html.twig
@@ -1,8 +1,7 @@
-{% extends "AddressBookBundle::base.html.twig" %}
+{% extends "carnetAddressBookBundle::base.html.twig" %}
 
-{% block title %}carnetAddressBookBundle:Contact:lister{% endblock %}
 
-{% block body %}
+
+{% block contenu %}
 <h1>Welcome to the Contact:lister page</h1>
-lister
 {% endblock %}
