--- a/src/carnet/AddressBookBundle/Resources/views/base.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/base.html.twig
@@ -10,13 +10,15 @@
 
 </head>
     <body>
+        <div class="container">
         {% include 'carnetAddressBookBundle::menu.html.twig'%}
 
-    <div class="container">
+        <div class="container">
 
-        {% block contenu %} {% endblock%}
+            {% block contenu %} {% endblock%}
 
-    </div><!-- fin div container-->
+        </div><!-- fin div container-->
+        </div>
 
     <script src="{{asset('bundles/carnetAddressBook/js/jquery-1.11.1.js')}}"></script>
     <script src="{{asset('bundles/carnetAddressBook/js/bootstrap.js')}}"></script>	
