--- a/src/carnet/AddressBookBundle/Resources/views/Groupe/lister.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Groupe/lister.html.twig
@@ -1,4 +1,4 @@
-{% extends "::base.html.twig" %}
+{% extends "carnetAddressBookBundle::base.html.twig" %}
 
 {% block title %}carnetAddressBookBundle:Groupe:lister{% endblock %}
 
