--- a/src/carnet/AddressBookBundle/Resources/views/menu.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/menu.html.twig
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
+  <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -15,21 +15,21 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"</span> Contacts <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Contacts <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">Ajouter</a></li>
             <li><a href="#">Lister</a></li>
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-briefcase"</span> Societes <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-briefcase"></span> Societes <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">Ajouter</a></li>
             <li><a href="#">Lister</a></li>
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-heart-empty"</span> Groupes <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-heart-empty"></span> Groupes <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">Ajouter</a></li>
             <li><a href="#">Lister</a></li>
