--- a/src/carnet/AddressBookBundle/Resources/views/Contact/ajouter.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Contact/ajouter.html.twig
@@ -1,7 +1,62 @@
-{% extends "::base.html.twig" %}
+{% extends "CarnetJobsBundle::base.html.twig" %}
+{% import "CarnetJobsBundle::bootstrap_contact.html.twig" as bootstrap %}
 
-{% block title %}carnetAddressBookBundle:Contact:ajouter{% endblock %}
+{% block title %}Ajouter un contact - Jobs{% endblock %}
 
-{% block body %}
-<h1>Welcome to the Contact:ajouter page</h1>
+{% block stylesheets %}
+
+    <link rel="stylesheet" href="{{ asset('bundles/carnetaddressbook/js/select2-3.5.1/select2.css')}}">
+    <link rel="stylesheet" href="{{ asset('bundles/carnetaddressbook/js/select2-3.5.1/select2-bootstrap.css')}}">
+
+    <style>
+        .help-block ul {
+            list-style: none;
+            padding-left: 0;
+        }
+    </style>
+
+  
+{% endblock %}
+
+{% block contenu %}
+    
+<h1>Ajouter un contact</h1>
+
+ {{form_start(form, {'attr': {'class': 'form-horizontal', 'role': 'form', 'novalidate': ''} })}}
+
+
+
+    {{bootstrap.formGroup(form.prenom, 'Prénom')}}
+    {{bootstrap.formGroup(form.nom, 'Nom')}}
+    {{bootstrap.formGroup(form.email, 'email')}}
+    {{bootstrap.formGroup(form.tel, 'Téléphone')}}
+    {{bootstrap.formGroup(form.adresse, 'Adresse')}}
+    {{bootstrap.formGroup(form.cp, 'Code Postal')}}
+    {{bootstrap.formGroup(form.ville, 'Ville')}}
+
+
+    <div class="form-group">   
+        <div class="col-sm-offset-2 col-sm-10">                
+            {{form_widget(form.save, {'attr': {'class':'btn btn-default'} })}}
+        </div>
+    </div>
+
+
+
+    {{form_end(form)}}
+
+{% endblock %}
+
+{% block javascripts %}
+
+    <script src="{{ asset('bundles/nextjobs/js/select2-3.5.1/select2.js')}}"></script>
+    <script src="{{ asset('bundles/nextjobs/js/select2-3.5.1/select2_locale_fr.js')}}"></script>
+    
+  <script>
+        $("#AnnonceForm_categories").select2({
+            placeholder: 'Selectionnez une ou plusieurs catégories'
+        });
+    </script>
+
+ 
 {% endblock %}
