--- a/src/carnet/AddressBookBundle/Resources/views/menu.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/menu.html.twig
@@ -17,22 +17,22 @@
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Contacts <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Ajouter</a></li>
-            <li><a href="#">Lister</a></li>
+            <li><a href="{{path('carnet_addressBook_contact_ajouter')}}">Ajouter</a></li>
+            <li><a href="{{path('carnet_addressBook_contact_lister')}}">Lister</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-briefcase"></span> Societes <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Ajouter</a></li>
-            <li><a href="#">Lister</a></li>
+            <li><a href="{{path('carnet_addressBook_societe_ajouter')}}">Ajouter</a></li>
+            <li><a href="{{path('carnet_addressBook_societe_lister')}}">Lister</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-heart-empty"></span> Groupes <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Ajouter</a></li>
-            <li><a href="#">Lister</a></li>
+            <li><a href="{{path('carnet_addressBook_groupe_ajouter')}}">Ajouter</a></li>
+            <li><a href="{{path('carnet_addressBook_groupe_lister')}}">Lister</a></li>
           </ul>
         </li>
       </ul>
