--- a/src/carnet/AddressBookBundle/Resources/views/Groupe/ajouter.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Groupe/ajouter.html.twig
@@ -1,7 +1,10 @@
-{% extends "::base.html.twig" %}
+{% extends "carnetAddressBookBundle::base.html.twig" %}
 
-{% block title %}carnetAddressBookBundle:Groupe:ajouter{% endblock %}
+{% block title %}Carnet d'adresse{% endblock %}
 
-{% block body %}
-<h1>Welcome to the Groupe:ajouter page</h1>
+{% block contenu %}
+<h2>Ajouter un groupe:</h2>
+
+{{form(form)}}
+
 {% endblock %}
