--- a/src/carnet/AddressBookBundle/Resources/views/Societe/ajouter.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Societe/ajouter.html.twig
@@ -1,7 +1,26 @@
-{% extends "::base.html.twig" %}
+{% extends "carnetAddressBookBundle::base.html.twig" %}
+{% import "carnetAddressBookBundle::bootstrap.html.twig" as bootstrap%}
 
-{% block title %}carnetAddressBookBundle:Societe:ajouter{% endblock %}
+{% block title %}Carnet d'adresse - ajouter une société{% endblock %}
 
-{% block body %}
-<h1>Welcome to the Societe:ajouter page</h1>
+{%block stylesheets %}{%endblock%}
+
+{% block contenu %}
+    <h1>Ajouter une société</h1>
+    {{form_start(form, {'attr':{'class':'form-horizontal', 'role':'form', 'novalidate':''} })}}
+    
+    {{bootstrap.formGroup(form.nom, 'Nom')}}
+    {{bootstrap.formGroup(form.adresse, 'Adresse')}}
+    {{bootstrap.formGroup(form.ville, 'Ville')}}
+    {{bootstrap.formGroup(form.cp, 'cp')}}
+
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            {{form_widget(form.save, {'attr':{'class':'btn btn-primary'} }) }}
+        </div>
+    </div>
+    {{form_end(form)}}
 {% endblock %}
+
+{%block javascripts %}
+{% endblock%}
