Kevin: very good

--- a/src/carnet/AddressBookBundle/Resources/views/Societe/ajouter.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Societe/ajouter.html.twig
@@ -1,13 +1,11 @@
 {% extends "carnetAddressBookBundle::base.html.twig" %}
-{% import "carnetAddressBookBundle::bootstrap.html.twig" as bootstrap%}
 
 {% block title %}Carnet d'adresse - ajouter une société{% endblock %}
 
-{%block stylesheets %}{%endblock%}
-
 {% block contenu %}
     <h1>Ajouter une société</h1>
-    {{form_start(form, {'attr':{'class':'form-horizontal', 'role':'form', 'novalidate':''} })}}
+    {{form(form)}}
+    {#{{form_start(form, {'attr':{'class':'form-horizontal', 'role':'form', 'novalidate':''} })}}
     
     {{bootstrap.formGroup(form.nom, 'Nom')}}
     {{bootstrap.formGroup(form.adresse, 'Adresse')}}
@@ -19,8 +17,5 @@
             {{form_widget(form.save, {'attr':{'class':'btn btn-primary'} }) }}
         </div>
     </div>
-    {{form_end(form)}}
+    {{form_end(form)}}#}
 {% endblock %}
-
-{%block javascripts %}
-{% endblock%}
