contact ajouter en travaux11:50

--- a/src/carnet/AddressBookBundle/Resources/views/Contact/lister.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Contact/lister.html.twig
@@ -19,7 +19,15 @@
 
             <div class="telephone">
                 <p>
+                    
+                    </br>
                     {{contact.tel}}
+                    </br>
+                    {{contact.email}}
+                    </br>
+                    {{contact.adresse}}
+                    </br>
+                    {{contact.cp}}, {{contact.ville}}
                     
                 </p>              
             </div>
