--- a/src/carnet/AddressBookBundle/Resources/views/Contact/ajouter.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Contact/ajouter.html.twig
@@ -1,4 +1,4 @@
-{% extends "carnetJobsBundle::base.html.twig" %}
+{% extends "carnetAddressBookBundle::base.html.twig" %}
 {% import "carnetAddressBookBundle::bootstrap_contact.html.twig" as bootstrap %}
 
 {% block title %}Ajouter un contact - Jobs{% endblock %}
