- modifs des pages Societe.php et ajouter.html.twig

--- a/src/carnet/AddressBookBundle/Resources/views/Societe/ajouter.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Societe/ajouter.html.twig
@@ -1,4 +1,5 @@
 {% extends "carnetAddressBookBundle::base.html.twig" %}
+{#{% import "carnetAddressBookBundle::bootstrap.html.twig" as bootstrap%}#}
 
 {% block title %}Carnet d'adresse - ajouter une société{% endblock %}
 
