Kevin: very good

--- a/src/carnet/AddressBookBundle/Resources/views/Contact/ajouter.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Contact/ajouter.html.twig
@@ -33,6 +33,7 @@
     {{bootstrap.formGroup(form.adresse, 'Adresse')}}
     {{bootstrap.formGroup(form.cp, 'Code Postal')}}
     {{bootstrap.formGroup(form.ville, 'Ville')}}
+    {{bootstrap.formGroup(form.societe_id_societe, 'Societe')}}
 
 
     <div class="form-group">   
