--- a/src/carnet/AddressBookBundle/Resources/views/Groupe/ajouter.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Groupe/ajouter.html.twig
@@ -1,10 +1,24 @@
 {% extends "carnetAddressBookBundle::base.html.twig" %}
+{% import "carnetAddressBookBundle::bootstrap.html.twig" as bootstrap%}
 
 {% block title %}Carnet d'adresse{% endblock %}
 
 {% block contenu %}
 <h2>Ajouter un groupe:</h2>
 
-{{form(form)}}
+{#{{form(form)}}#}
+
+{{form_start(form, {'attr':{'class':'form-horizontal', 'role':'form', 'novalidate':''} })}}
+
+{{bootstrap.formGroup(form.nom, 'Nom')}}
+{{bootstrap.formGroup(form.description, 'Description')}}
+
+<div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+        {{form_widget(form.save, {'attr':{'class':'btn btn-primary'} }) }}
+    </div>
+</div>
+
+{{form_end(form)}}
 
 {% endblock %}
