- modifs sur le menu.twig

--- a/src/carnet/AddressBookBundle/Resources/views/menu.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/menu.html.twig
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{path('carnet_addressBook_contact_lister')}}">Carnet d'adresse</a>
+      <a class="navbar-brand" href="#">Carnet d'adresse</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
