- formulaires contact Ok

--- a/src/carnet/AddressBookBundle/Resources/views/Contact/ajouter.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Contact/ajouter.html.twig
@@ -33,6 +33,8 @@
     {{bootstrap.formGroup(form.adresse, 'Adresse')}}
     {{bootstrap.formGroup(form.cp, 'Code Postal')}}
     {{bootstrap.formGroup(form.ville, 'Ville')}}
+    {{bootstrap.formGroup(form.societe, 'Societe')}}
+    {{bootstrap.formGroup(form.groupes, 'Groupes')}}
 
     <div class="form-group">   
         <div class="col-sm-offset-2 col-sm-10">                
