- modifs pages controller + lister + details de SOCIETE

--- a/src/carnet/AddressBookBundle/Resources/views/Groupe/lister.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Groupe/lister.html.twig
@@ -7,7 +7,9 @@
 
 {% for groupe in listeGroupes %}
     <ul class="list-group">
+    <a href="#">
         <li class="list-group-item">{{groupe.nom}}</li>
+    </a>
     </ul>
 {% endfor %}
 
