- modifs de la vue detail de SOCIETE

--- a/src/carnet/AddressBookBundle/Resources/views/Societe/details.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Societe/details.html.twig
@@ -8,10 +8,8 @@
 <div class="annonce">
         <div class="description">
             <p>
-                {{societe.adresse}}
-                <br/>
-                {{societe.ville}}
-                <br/>
+                {{societe.adresse}}, 
+                {{societe.ville}}, 
                 {{societe.cp}}
             </p>
         </div>       
