Kevin: 16h04 maj du details

--- a/src/carnet/AddressBookBundle/Resources/views/Societe/details.html.twig
+++ b/src/carnet/AddressBookBundle/Resources/views/Societe/details.html.twig
@@ -16,8 +16,7 @@
                 
                 {% for contact in societe.contacts%}
                 <p>
-                    <h4>{{contact.nom}}</h4>
-                    {{contact.prenom}}
+                    <h4>{{contact.nom}} {{contact.prenom}}</h4>
                 </p>
                 <br/>
                 {% endfor %}
